[package]
name = "one-slot-joker-smash"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
smash = { package = "skyline_smash", git = "https://github.com/blu-dev/skyline-smash.git", rev = "4d38300" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }

once_cell = "1.12.0"
parking_lot = "0.12.1"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
